overflow fixed

--- a/style.css
+++ b/style.css
@@ -64,18 +64,16 @@ a{
   /* Stationary button */
   #joinSearch {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100vw;
+    top: 60%;
+    width: 100%;
     transform: translate(-50%, 100%);
     font-weight: bold;
     cursor: pointer;
     color: white;
     background: rgba(0, 0, 0, 0.555);
-    /* border: 2px solid white; */
-    padding: 0.5em 1em;
     border-radius: 8px;
-    transition: all 0.3s ease;
+    transition: all 0.3s 
+ease;
     z-index: 10;
   }
   
